--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <main>
         <div class="container">
-            <img src="../Actividad Coches/img/polo.jpg" alt="Model 1" class="car top-left">
-            <img src="../Actividad Coches/img/clasea.jpeg" alt="Model 2" class="car top-right">
-            <img src="../Actividad Coches/img/serie1.jpg" alt="Model 3" class="car center">
-            <img src="../Actividad Coches/img/a3.jpg" alt="Model 4" class="car bottom-left">
-            <img src="../Actividad Coches/img/ibiza.jpg" alt="Model 5" class="car bottom-right">
+            <img src="../img/polo.jpg" alt="Model 1" class="car top-left">
+            <img src="../img/clasea.jpeg" alt="Model 2" class="car top-right">
+            <img src="../img/serie1.jpg" alt="Model 3" class="car center">
+            <img src="../img/a3.jpg" alt="Model 4" class="car bottom-left">
+            <img src="../img/ibiza.jpg" alt="Model 5" class="car bottom-right">
         </div>
     </main>
 
