--- a/index.html
+++ b/index.html
@@ -22,11 +22,21 @@
 
     <main>
         <div class="container">
-            <img src="/img/polo.jpg" alt="Model 1" class="car top-left">
-            <img src="/img/clasea.jpeg" alt="Model 2" class="car top-right">
-            <img src="/img/serie1.jpg" alt="Model 3" class="car center">
-            <img src="/img/a3.jpg" alt="Model 4" class="car bottom-left">
-            <img src="/img/ibiza.jpg" alt="Model 5" class="car bottom-right">
+            <a href="https://www.volkswagen.es/es/modelos/polo.html" target="_blank">
+                <img src="img/polo.jpg" alt="Model 1" class="car top-left">
+            </a>
+            <a href="https://www.mercedes-benz.es/passengercars/models/hatchback/a-class/overview.html" target="_blank">
+                <img src="img/clasea.jpeg" alt="Model 2" class="car top-right">
+            </a>
+            <a href="https://www.bmw.es/es/coches-bmw/serie-1/berlina/2023/vision-general.html" target="_blank">
+                <img src="img/serie1.jpg" alt="Model 3" class="car center">
+            </a>
+            <a href="https://www.audi.es/es/web/es/modelos/a3/a3-sportback.html" target="_blank">
+                <img src="img/a3.jpg" alt="Model 4" class="car bottom-left">
+            </a>
+            <a href="https://www.seat.es/coches/ibiza/modelo.html" target="_blank">
+                <img src="img/ibiza.jpg" alt="Model 5" class="car bottom-right">
+            </a>
         </div>
     </main>
 
